fix(context-views): increase contrast for handle

--- a/src/app/common/contextviews/cc-context-view.scss
+++ b/src/app/common/contextviews/cc-context-view.scss
@@ -19,9 +19,9 @@
 .cc-context-view__handle {
     margin: 10px 10px 0;
     background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.70);
     border-width: 1px 0;
-    color: rgba(255, 255, 255, 0.25);
+    color: rgba(255, 255, 255, 0.70);
     height: 40px;
     text-align: center;
 }
